# openg7-org/src/app/core/api/strapi.routes.ts
@@ -16,6 +16,7 @@ export const STRAPI_ROUTES = {
     meProfileLogoutOthers: '/api/users/me/profile/sessions/logout-others',
     meProfileEmailChange: '/api/users/me/profile/email-change',
     meFavorites: '/api/users/me/favorites',
+    meOpportunityOffers: '/api/users/me/opportunity-offers',
     meSavedSearches: '/api/users/me/saved-searches',
     meAlerts: '/api/users/me/alerts',
   },
