# strapi/src/api/opportunity-offer/routes/opportunity-offer.ts
@@ -1,0 +1,16 @@
+export default {
+  routes: [
+    {
+      method: 'GET',
+      path: '/users/me/opportunity-offers',
+      handler: 'opportunity-offer.me',
+      config: {},
+    },
+    {
+      method: 'POST',
+      path: '/users/me/opportunity-offers',
+      handler: 'opportunity-offer.createMe',
+      config: {},
+    },
+  ],
+};
